src/objects/BackgroundCheck__c.object
<CustomObject>
    <description>This object allows the Teacher License team to track all background checks completed for students.</description>
    <fields>
        <fullName>BCIClearedDate__c</fullName>
        <label>BCI Cleared Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BCICleared__c</fullName>
        <label>BCI Cleared</label>
        <picklist>
            <picklistValues>
                <fullName>1 – Clear for DT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 – Clear for DT, but not Licensure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 – Clear for PCE but not DT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 – Incomplete Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 – Not Clear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 – Expired</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BCIExpirationDate__c</fullName>
        <label>BCI Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BCINote__c</fullName>
        <description>This is an open text field used to indicate the Talisma Interaction ID where the background check document can be found.</description>
        <label>BCI Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BCIState__c</fullName>
        <label>BCI State</label>
        <picklist>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ND</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BCIType__c</fullName>
        <label>BCI Type</label>
        <picklist>
            <picklistValues>
                <fullName>BCI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCI &amp; I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Abuse Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHRI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CJDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CJIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Criminal Records Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DLPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EEB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FBI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FDLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Police</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Military/DOD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OSPI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Residency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School District</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sheriff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP, CA, FBI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieldExperience__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Field Experience</label>
        <referenceTo>FieldExperience__c</referenceTo>
        <relationshipLabel>Background Checks</relationshipLabel>
        <relationshipName>Background_Checks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this BackgroundCheck__c record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to contact.</description>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Background Checks</relationshipLabel>
        <relationshipName>Background_Checks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Background Check</label>
    <listViews>
        <fullName>AllBackgroundChecks</fullName>
        <columns>NAME</columns>
        <columns>Student__c</columns>
        <columns>BCIType__c</columns>
        <columns>BCIClearedDate__c</columns>
        <columns>BCIExpirationDate__c</columns>
        <columns>BCIState__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Background Checks</label>
        <sharedTo>
            <group>SRMSupport</group>
            <role>FieldPlacementLogisticsUser</role>
            <role>TeacherLicensureAgent</role>
            <role>TeacherSuccess</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Background Check Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Background Checks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>